--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@ build/*
 ecfeed.creator.user
 ecfeed
 
-conan.lock
-conanbuildinfo.args
-conanbuildinfo.txt
-conaninfo.txt
-graph_info.json
-test
+**/conan.lock
+**/conanbuildinfo.args
+**/conanbuildinfo.txt
+**/conaninfo.txt
+**/graph_info.json
