--- a/deploy/recipes/ecfeed/1.1.0/conandata.yml
+++ b/deploy/recipes/ecfeed/1.1.0/conandata.yml
@@ -1,6 +1,6 @@
 sources:
   "1.1.0":
-    url: "https://github.com/ecfeed/ecfeed.cpp/archive/conan.zip"
-    sha256: "9684584f5a1e179670081b5d343a5cc91f7fc90e903205238d8bf033b070e867"
+    url: "https://github.com/ecfeed/ecfeed.cpp/archive/1.1.0.zip"
+    sha256: "ea1ac1196649715299e810e2f39e61e8497d4161c25658cf1b772b842e42c8e1"
 
 
