--- a/deploy/recipes/ecfeed/all/test_package/CMakeLists.txt
+++ b/deploy/recipes/ecfeed/all/test_package/CMakeLists.txt
@@ -1,15 +1,12 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.15)
 
 project(example CXX)
 
-set(CMAKE_CXX_COMPILER_VERSION 8)
-
-add_compile_options(-std=c++2a)
-
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+conan_basic_setup(TARGETS)
+
+find_package(ecfeed CONFIG REQUIRED)
 
 add_executable(example example.cpp)
-
-target_link_libraries(${PROJECT_NAME} stdc++fs)
-target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
+target_link_libraries(${PROJECT_NAME} ecfeed::ecfeed)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
